# DDPMLibrary

./: .gitignore  LICENSE  README.md  benchmark_sparse_accuracy.py  benchmark_vs_vcnn.py  compare_with_research_eval.py  example.py  pyproject.toml
ddpm_library/: __init__.py  config.py  geo.py  inference.py  predict.py  standardize.py
ddpm_library/model/: __init__.py  schedule.py
scripts/: compare_with_research_eval.py  example.py  multidraw.py  stream_eval_lib.py  stream_example.py  uncertainty_maps.py
src/ddpm_library/: __init__.py  config.py  inference.py  rasterize.py  stream_predict.py  vcnn_predict.py
src/ddpm_library/assets/: lat_lon_grid.npz  stream_dir_weights.pt  stream_grid.npz  stream_mag_weights.pt  vcnn_weights.pt  weights.pt
src/ddpm_library/model/: unet_blocks.py  unet_film.py  unet_multires.py  vcnn.py
src/ddpm_library/stream/: __init__.py  conditioning.py  diffusion.py  sampler.py
tests/: test_geo.py  test_rasterize.py  test_smoke.py  test_stream.py  test_vcnn.py
